--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,8 +38,8 @@ MRUItem0=/Game/NewMap
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2017.10.14-16.09.15
-BuildingEscape.LastCompileMethod=Unknown
+BuildingEscape.TimeStamp=2017.10.14-16.45.56
+BuildingEscape.LastCompileMethod=Runtime
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -234,6 +234,9 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+PositionReport.Tags=True
+PositionReport.Activation=True
+PositionReport.Cooking=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
